<resources>
    <string name="app_name">家家帮</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="host1">看着</string>
    <string name="host2">帮帮</string>
    <string name="host3">晒晒</string>
    <string name="host4">我家</string>
    <string name="host5">乐园</string>
    <string name="username">账号</string>
    <string name="password">密码</string>

    <string name="xlistview_header_hint_normal">下拉即可刷新…</string>
    <string name="xlistview_header_hint_ready">松开即可刷新…</string>
    <string name="xlistview_header_hint_loading">加载中…</string>
    <string name="xlistview_header_last_time">最后更新：</string>
    <string name="xlistview_footer_hint_normal">上拉查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="scan_title">扫一扫</string>
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="sd_light">闪光灯</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="title_activity_photo_view">PhotoViewActivity</string>
    <string name="title_activity_record_audio">RecordAudioActivity</string>
    <string name="view_record_wav">录音WAV文件</string>
    <string name="view_record_amr">录音AMR文件</string>
    <string name="view_stop">停止录音</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="isRecording">正在录音中...</string>
    <string name="isStopped">点击播放录音</string>
    <string name="isPlaying">正在播放录音...</string>
    <string name="startRecord">点击开始录音</string>

    <string name="submit">发布</string>
    <!--TODO: Remove or change this placeholder text-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_growth_tree">GrowthTreeActivity</string>
    <string name="title_activity_growthtree_detail">GrowthtreeDetailActivity</string>
    <string name="title_activity_invite_family">LookInviteFamilyActivity</string>
    <string name="title_activity_invite_friend">LookInviteFriendsActivity</string>
    <string name="title_activity_submit">SubmitActivity</string>
    <string name="title_activity_square_detail">SquareDetailActivity</string>
    <string name="title_activity_vrecord">VRecordActivity</string>
    <string name="search_with_punctuation">搜索</string>
    <string name="promot_home_sex">性别</string>
    <string name="title_activity_bind_number">BindNumberActivity</string>
    <string name="title_activity_friend_list">FriendListActivity</string>
</resources>
