<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:gravity="center"

    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/alter_bg">

         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="@string/app_name"
             android:textColor="@color/blue"
             android:gravity="center_vertical"
             android:textSize="10pt"
             android:id="@+id/title"
             android:paddingLeft="12dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:text="@string/app_name"
            android:layout_weight="1"
            android:paddingLeft="12dp"
            android:id="@+id/content"
            android:textSize="7pt"
            android:paddingRight="12dp"
            android:gravity="center_vertical"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/b9b9b9"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alert_button_bg"
                android:id="@+id/cancel"
                android:text="@string/cancel"/>

            <ImageView
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/b9b9b9"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alert_button_right_bg"
                android:id="@+id/confirm"
                android:text="@string/confirm"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
